apps/backstage/base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    app.kubernetes.io/name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backstage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backstage
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: backstage
          image: backstage:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: backstage-config
              mountPath: /app/app-config.yaml
              subPath: app-config.yaml
              readOnly: true
            - name: backstage-config
              mountPath: /app/config/app-config-production.yaml
              subPath: app-config-production.yaml
              readOnly: true
          ports:
            - name: http
              containerPort: 7007
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /healthcheck
              port: http
              scheme: HTTP
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /healthcheck
              port: http
              scheme: HTTP
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
      volumes:
        - name: backstage-config
          configMap:
            name: backstage-config
