apps/backstage/base/resources/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-backstage
  namespace: backstage
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-backstage
  hostnames:
    - backstage.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backstage
          port: 80
